@@ -30,6 +30,7 @@
  - updates for code quality (mamba/goffy)
  - added clone feature for items (mjoel/goffy)
  - update test data (mamba/goffy)
+ - added start/limit handling (goffy)
 
 <h5>3.04 Final   [2020-11-11]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
 <hr>
